[package]
name = "SpotifyDeviceSwitcher"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.44"
dirs = "6.0.0"
dotenvy = "0.15.7"
rspotify = { version = "0.16.1", features = ["cli", "webbrowser"] }
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
